force-app/main/default/objects/Contact/fields/Blacklisted_merchant__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_merchant__c</fullName>
    <formula>Account.Blacklisted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blacklisted merchant</label>
    <type>Checkbox</type>
</CustomField>