force-app/main/default/objects/Contact/fields/Challenging_Point_On_Contact__c.field-meta.xml
<CustomField>
    <fullName>Challenging_Point_On_Contact__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <label>Challenging Point On Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer service details</fullName>
            </value>
            <value>
                <fullName>Missing email</fullName>
            </value>
            <value>
                <fullName>Missing name</fullName>
            </value>
            <value>
                <fullName>Missing phone number</fullName>
            </value>
            <value>
                <fullName>No contact details</fullName>
            </value>
            <value>
                <fullName>No longer in company</fullName>
            </value>
            <value>
                <fullName>Not related to the merchant</fullName>
            </value>
            <value>
                <fullName>Old contact details</fullName>
            </value>
            <value>
                <fullName>Wrong email</fullName>
            </value>
            <value>
                <fullName>Wrong name</fullName>
            </value>
            <value>
                <fullName>Wrong phone number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>