force-app/main/default/objects/Contact/fields/Coming_From_BO_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Coming_From_BO_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coming From BO - Duplicate</label>
    <type>Checkbox</type>
</CustomField>