force-app/main/default/objects/Contact/fields/CustomerService_Contact__c.field-meta.xml
<CustomField>
    <fullName>CustomerService_Contact__c</fullName>
    <formula>IF(INCLUDES( Roles__c , &apos;Customer Service&apos;), &apos;True&apos;, &apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerService_Contact</label>
    <type>Text</type>
</CustomField>