force-app/main/default/objects/Contact/fields/Defined_in_BO__c.field-meta.xml
<CustomField>
    <fullName>Defined_in_BO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defined in BO</label>
    <type>Checkbox</type>
</CustomField>