force-app/main/default/objects/Contact/fields/Email_to_case_Prio_contact__c.field-meta.xml
<CustomField>
    <fullName>Email_to_case_Prio_contact__c</fullName>
    <formula>IF ( ISPICKVAL( Account.Stage__c , &apos;Run&apos;), 1, 
IF ( ISPICKVAL( Account.Stage__c , &apos;N.M.O.&apos;), 1, 
IF ( ISPICKVAL( Account.Stage__c , &apos;Onboarding&apos;), 1, 
IF ( ISPICKVAL( Account.Stage__c , &apos;Offline&apos;), 2, 
IF ( ISPICKVAL(  Account.Stage_Buyback__c  , &apos;Buyback Onboarding&apos;), 1, 
IF ( ISPICKVAL(  Account.Stage_Buyback__c  , &apos;Buyback Run&apos;), 1, 
IF ( ISPICKVAL( Account.Stage__c , &apos;Buyback Offline&apos;), 2, 




3)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email-to-case Prio contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>