force-app/main/default/objects/Contact/fields/F_B_contacts__c.field-meta.xml
<CustomField>
    <fullName>F_B_contacts__c</fullName>
    <formula>if( INCLUDES(Roles__c , &quot;Business&quot;), True, if( INCLUDES(Roles__c , &quot;Finance/Accounting&quot;), True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F&amp;B contacts</label>
    <type>Checkbox</type>
</CustomField>