force-app/main/default/objects/Contact/fields/Merchant_Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Email_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Merchant Email Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>