force-app/main/default/objects/Contact/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Merchant ID</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>