force-app/main/default/objects/Contact/fields/Merchant_PK__c.field-meta.xml
<CustomField>
    <fullName>Merchant_PK__c</fullName>
    <formula>Account.Back_Office_PK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant PK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>