force-app/main/default/objects/Contact/fields/MobilePhone_2__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone_2__c</fullName>
    <label>Mobile 2</label>
    <type>Phone</type>
</CustomField>