force-app/main/default/objects/Contact/fields/My_contact__c.field-meta.xml
<CustomField>
    <fullName>My_contact__c</fullName>
    <formula>if( Account.BizDev__r.Id =  $User.Id ,&apos;yes&apos;, if(  Account.BizDev_Buyback__r.Id =  $User.Id ,&apos;yes&apos;, &apos;no&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My contact</label>
    <type>Text</type>
</CustomField>