force-app/main/default/objects/Contact/fields/Old_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Contact</label>
    <type>Checkbox</type>
</CustomField>