force-app/main/default/objects/Contact/fields/Professional_network__c.field-meta.xml
<CustomField>
    <fullName>Professional_network__c</fullName>
    <description>LinkedIn profile URL (or equivalent) of the Contact</description>
    <label>Professional network</label>
    <type>Url</type>
</CustomField>