force-app/main/default/objects/Contact/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <description>Shadow field used to bring the Account Contact Relationship&apos;s Roles field in the Account record as, on Back Market, on Contact is linked only to one Account.</description>
    <label>Roles</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back-Office</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
                <default>true</default>
                <label>Business</label>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Inventory/Warehouse</fullName>
            </value>
            <value>
                <fullName>Finance/Accounting</fullName>
            </value>
            <value>
                <fullName>Mana Buyer</fullName>
            </value>
            <value>
                <fullName>Mana Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>