force-app/main/default/objects/Contact/fields/SSC_login_enabled__c.field-meta.xml
<CustomField>
    <fullName>SSC_login_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSC login enabled</label>
    <type>Checkbox</type>
</CustomField>