force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>No longer employed in the company</fullName>
                <isActive>false</isActive>
                <label>No longer employed in the company</label>
            </value>
            <value>
                <fullName>Spotted as duplicate coming from BO (will be deleted)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>