force-app/main/default/objects/Contact/fields/TECH_Role_contain_quality_business__c.field-meta.xml
<CustomField>
    <fullName>TECH_Role_contain_quality_business__c</fullName>
    <formula>IF(INCLUDES(Roles__c , &quot;Quality&quot;),&apos;Quality;&apos;,&apos;&apos;)
+
IF(INCLUDES(Roles__c , &quot;Business&quot;),&apos;Business&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Role_contain_quality_business</label>
    <type>Text</type>
</CustomField>