force-app/main/default/objects/Contact/validationRules/Require_Challenging_Point.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Challenging_Point</fullName>
    <active>true</active>
    <description>If the status of the contact is changed to Inactive, require Challenging Point on Contact.</description>
    <errorConditionFormula>AND(
ISCHANGED( Status__c ),
ISPICKVAL( Status__c,&quot;Inactive&quot;),
ISBLANK ( Challenging_Point_On_Contact__c ))</errorConditionFormula>
    <errorDisplayField>Challenging_Point_On_Contact__c</errorDisplayField>
    <errorMessage>Please add a Challenging Point for this Contact.</errorMessage>
</ValidationRule>