force-app/main/default/objects/Contact/validationRules/Require_Email_or_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_or_Phone</fullName>
    <active>true</active>
    <description>At least a mobile number or an e-mail or a Professional Network U.R.L. must be filled.</description>
    <errorConditionFormula>AND ( Email = NULL, 
      MobilePhone = NULL, 
      Professional_network__c = NULL,
      $User.ByPassValidationRules__c !=true
 )</errorConditionFormula>
    <errorMessage>Please fill in at least a mobile number, an e-mail or a Professional Network U.R.L.</errorMessage>
</ValidationRule>