force-app/main/default/objects/Contact/listViews/All_active_contacts.listView-meta.xml
<ListView>
    <fullName>All_active_contacts</fullName>
    <columns>Account.Back_Office_PK__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Roles__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>MobilePhone_2__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Email_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>My_contact__c</field>
        <operation>equals</operation>
        <value>yes</value>
    </filters>
    <label>My active contacts</label>
</ListView>