force-app/main/default/objects/Contact/listViews/Newsletter_Audience_Recipients.listView-meta.xml
<ListView>
    <fullName>Newsletter_Audience_Recipients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.Region__c</columns>
    <columns>Account.Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Stage__c</field>
        <operation>equals</operation>
        <value>Run</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.E_U</value>
    </filters>
    <filters>
        <field>Account.Country__c</field>
        <operation>notEqual</operation>
        <value>France</value>
    </filters>
    <filters>
        <field>Account.Country__c</field>
        <operation>notEqual</operation>
        <value>China,Hong Kong</value>
    </filters>
    <label>Backspace Recipients List (EU excl. FR)</label>
</ListView>