force-app/main/default/objects/Contact/listViews/Pardot_Test_Sample.listView-meta.xml
<ListView>
    <fullName>Pardot_Test_Sample</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.U_S</value>
    </filters>
    <filters>
        <field>Account.BizDev__c</field>
        <operation>equals</operation>
        <value>Sam Peglow</value>
    </filters>
    <filters>
        <field>Account.Number_of_SKU__c</field>
        <operation>lessThan</operation>
        <value>50-100</value>
    </filters>
    <filters>
        <field>Account.All_contacts_verified__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pardot Test Sample</label>
</ListView>